# misc

JavaDemo/src/: Main.java
MyBatis/: pom.xml
MyBatis/src/main/java/com/yisui/: App.java
MyBatis/src/main/resources/: SqlMapConfig.xml  User.xml  jdbc.property
SpringDemo/src/com/yisui/: App.java  BeanProcess.java  HelloWorld.java
jdbcdemo/: pom.xml
jdbcdemo/src/: applicationContext.xml
jdbcdemo/src/com/yisui/app/: App.java
jdbcdemo/src/com/yisui/dao/: StudentDao.java
jdbcdemo/src/com/yisui/model/: Student.java
rust/HelloTest/: .env  Cargo.toml  Dockerfile  docker-compose.yaml
rust/HelloTest/src/: main.rs  test.rs  util.rs
rust/axumtest/: Cargo.toml
rust/axumtest/src/: main.rs
rust/sqltest/: Cargo.toml
rust/sqltest/migrations/: 20240514030250_reports.down.sql  20240514030250_reports.up.sql  20240514054310_add_column_to_reports.down.sql  20240514054310_add_column_to_reports.up.sql  20240514114159_scene_rule.down.sql  20240514114159_scene_rule.up.sql  20240515161041_drop_rule.up.sql
rust/sqltest/src/: main.rs  signal.rs
rust/webtest/: Cargo.toml
rust/webtest/src/: main.rs
skylaunch/: .gitignore  lifecycleprocess.cpp  lifecycleprocess.h  main.cpp  skydefine.h  skylaunch.pro  skyutil.cpp  skyutil.h
