[package]
name = "HelloTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drain = "0.1.2"
futures = "0.3.30"
redis = { version = "0.25.3", features = ["tokio-comp"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = { version = "0.3.30", features = ["serde", "macros"] }
dotenvy = "0.15.7"
lapin = "= 2.3.1"
amq-protocol = "=7.1.2"
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
serde_json = "1.0.117"

serde = {version="1.0.201",features=["derive"]}
serde_derive = "1.0.201"
rhai = "1.18.0"
cel-interpreter = "0.7.0"
expression_engine = "0.7.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"