[package]
name = "sqltest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "=0.7.2", features = [
    "mysql",
    "time",
    "json",
    "runtime-tokio",
] }
dotenvy = "0.15.6"
chrono = { version = "0.4.23" }
sqlx-cli = "0.7.2"
serde_json = "1.0.117"
serde = {version="1.0.201",features=["derive"]}
futures = "0.3.30"
rust_decimal = "1.28.0"
tracing = "0.1.40"
time = { version = "0.3.30", features = ["serde"] }
thiserror = "1"
utoipa = { version = "4.1.0", features = ["axum_extras", "time"] }